<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Iris</string>

    <!--MenuItem titles-->
    <string name="menu_item_title_go_to_favorites">Favourites</string>
    <string name="menu_item_title_go_to_gallery">Gallery</string>
    <string name="menu_item_title_go_to_camera">Camera</string>

    <!--Color Picker Fragment-->
    <string name="color_selector_toolbar_title">Iris</string>
    <string name="init_text_x">X :</string>
    <string name="init_text_y">Y :</string>
    <string name="init_text_hex">HEX:</string>
    <string name="init_text_rgb">RGB:</string>
    <string name="init_text_cmyk">CMYK:</string>
    <string name="save_button_text">Hold to Save</string>

    <!--Saved Color Tile-->
    <string name="cancel_button_text">Cancel</string>
    <string name="delete_button_text">Delete</string>
    <string name="rgb_field_format">RGB: \n%s</string>
    <string name="cmyk_field_format">CMYK: \n%s</string>
</resources>
