<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/selector_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundPurple">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/spaceGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/color_selector_toolbar_title" />

    <com.strasz.color_value_calculator.TouchImageView
        android:id="@+id/main_image_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_toolbar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />


    <LinearLayout
        android:id="@+id/pixel_value_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:theme="@style/PurpleBackground"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_30">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:text="@string/init_text_x"
            android:textAlignment="center"
            android:textSize="20sp"
            android:theme="@style/DarkButton" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:text="@string/init_text_y"
            android:textAlignment="center"
            android:textSize="20sp"
            android:theme="@style/DarkButton" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/pixel_value_et_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:theme="@style/PurpleBackground"
        app:layout_constraintTop_toBottomOf="@id/pixel_value_title_layout">

        <TextView
            android:id="@+id/x_value_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="20sp"
            android:theme="@style/DarkButton" />

        <TextView
            android:id="@+id/y_value_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="20sp"
            android:theme="@style/DarkButton" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:paddingBottom="4dp"
        android:theme="@style/PurpleBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pixel_value_et_layout">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@android:color/black">

            <TextView
                android:id="@+id/selected_color_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:theme="@style/DarkButton" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hex_result"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="30dp"
                android:text="@string/init_text_hex"
                android:textSize="20sp"
                android:theme="@style/DarkButton" />

            <TextView
                android:id="@+id/rgb_result"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="30dp"
                android:text="@string/init_text_rgb"
                android:textSize="20sp"
                android:theme="@style/DarkButton" />

            <TextView
                android:id="@+id/cmyk_result"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="30dp"
                android:text="@string/init_text_cmyk"
                android:textSize="20sp"
                android:theme="@style/DarkButton" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>