<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/selector_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/spaceGrey">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/spaceGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/color_selector_toolbar_title" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_30"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/black_rounded_rect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_toolbar">


        <com.strasz.colorpicker.presentation.TouchImageView
            android:id="@+id/main_image_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="@drawable/clear_rounded_rect"/>
<!--            android:background="@android:color/black"/>-->


    </FrameLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_30"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/selected_color_container"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:maxWidth="300dp"
            android:layout_margin="8dp"
            android:background="@drawable/black_rounded_rect"
            app:layout_constraintDimensionRatio="H1,1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/selected_color_view"
                app:layout_constraintDimensionRatio="H1,1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="2"
            android:paddingTop="32dp"
            app:layout_constraintTop_toTopOf="@id/selected_color_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/selected_color_container"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hex_result"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:text="@string/init_text_hex"
                android:textSize="16sp"
                android:theme="@style/DarkButton" />

            <TextView
                android:id="@+id/rgb_result"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:text="@string/init_text_rgb"
                android:textSize="16sp"
                android:theme="@style/DarkButton" />

            <TextView
                android:id="@+id/cmyk_result"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:text="@string/init_text_cmyk"
                android:textSize="16sp"
                android:theme="@style/DarkButton" />

        </LinearLayout>



        <LinearLayout
            android:id="@+id/posLinearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            app:layout_constraintStart_toEndOf="@id/selected_color_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/init_text_x"
                android:textAlignment="viewEnd"
                android:textSize="12sp"
                android:theme="@style/DarkButton" />

            <TextView
                android:id="@+id/x_value_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="center"
                android:textSize="12sp"
                android:theme="@style/DarkButton" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/init_text_y"
                android:textAlignment="viewEnd"
                android:textSize="12sp"
                android:theme="@style/DarkButton" />

            <TextView
                android:id="@+id/y_value_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="center"
                android:textSize="12sp"
                android:theme="@style/DarkButton" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>